# GSRT_MailBox

./: .gitignore  DOCUMENTATION.md  README.md  alembic.ini  pyproject.toml  requirements.txt  usecase.txt
data/: audit_log.jsonl
data/mappings/: category_folder_map.yaml
data/prompts/: classifier_fewshot.txt  classifier_system.txt
data/rules/: classification_rules.yaml
migrations/: env.py
migrations/versions/: 20260316_0001_create_processed_emails.py
scripts/: bootstrap_folders.py  check_graph_connectivity.ps1  check_graph_user_lookup.ps1  run_api.py  run_once.py  seed_rules.py
scripts/data/: email_segregation.db
src/app/: __init__.py  main.py
src/app/api/: flask_app.py
src/app/application/: pipeline.py  prompt_builder.py  reply_builder.py  use_cases.py
src/app/domain/: folder_mapper.py  models.py  rules_engine.py
src/app/infrastructure/ai/: base.py  openai_client.py
src/app/infrastructure/mailbox/: base.py  microsoft_graph_client.py
src/app/infrastructure/persistence/: db.py  models.py  repository.py
src/app/infrastructure/ticketing/: base.py  stub_client.py
src/app/observability/: audit_logger.py  metrics.py
src/app/settings/: config.py  logging.py
tests/: conftest.py
tests/integration/: test_pipeline_flow.py
tests/unit/: test_folder_mapper.py  test_logging_setup.py  test_microsoft_graph_client.py  test_prompt_builder.py  test_rules_engine.py  test_servicenow_client.py
