[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-segregation"
version = "0.1.0"
description = "Mailbox email classification and folder routing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "python-dotenv>=1.0.1",
  "psycopg[binary]>=3.2.0",
  "SQLAlchemy>=2.0.0",
  "alembic>=1.13.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
